--- a/core/templates/core/product.html
+++ b/core/templates/core/product.html
@@ -20,7 +20,17 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="row mb-4">
-
+                        <div class="col-md-12 d-flex justify-content-between align-items-center">
+                            <h4 class="product-select">Select Types of Products</h4>
+                            <form id="filter-form" method="GET">
+                                <select class="selectpicker" name="tipo_producto" multiple>
+                                    {% for x in tipo %}
+                                    <option value="{{ x.descripcion }}" {% if x.descripcion in tipos_seleccionados %}selected{% endif %}>{{ x.descripcion }}</option>
+                                    {% endfor %}
+                                </select>
+                                <button type="submit">Filter</button>
+                            </form>
+                        </div>
                     </div>
                     <div class="row">
                         {% for aux in listado %}
@@ -31,7 +41,6 @@
                                         <p class="meta-prod d-flex">
                                           <form action="{% url 'agregar' aux.id %}" method="post">
                                             {% csrf_token %}
-                                            {% if user.is_authenticated and user.is_staff %}
                                             <a href="#" onclick="event.preventDefault(); this.closest('form').submit();" class="d-flex align-items-center justify-content-center">
                                               <span class="flaticon-shopping-bag"></span>
                                             </a>
