--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -110,6 +110,7 @@
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
                             <a class="dropdown-item" href="{% url 'checkout' %}">Pago</a>
                             <a class="dropdown-item" href="{% url 'add' %}">Agregar Producto</a>
+                            <a class="dropdown-item" href="{% url 'update' %}">Actualizar</a>
                         {% elif user.is_authenticated %}
                             <a class="dropdown-item" href="{% url 'product' %}">Productos</a>
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
@@ -117,6 +118,7 @@
                         {% else %}
                             <a class="dropdown-item" href="{% url 'product' %}">Productos</a>
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
+                            
                         {% endif %}
                       </div>
                   </li>
