--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -10,7 +10,7 @@
           <div class="col-md-8 ftco-animate d-flex align-items-end">
           	<div class="text w-100 text-center">
 	            <h1 class="mb-4">Unidos <span>por</span> un Bien <span>Animal</span>.</h1>
-	            <p><a href="#" class="btn btn-primary py-2 px-4">Comprar ahora</a> <a href="#" class="btn btn-white btn-outline-white py-2 px-4">Leer mas</a></p>
+	            <p><a href="{% url 'product' %}" class="btn btn-primary py-2 px-4">Comprar ahora</a> <a href="#" class="btn btn-white btn-outline-white py-2 px-4">Leer mas</a></p>
             </div>
           </div>
         </div>
