--- a/core/templates/core/product.html
+++ b/core/templates/core/product.html
@@ -8,8 +8,8 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate mb-5 text-center">
-            <p class="breadcrumbs mb-0"><span class="mr-2"><a href="{% url 'index' %}">Home <i class="fa fa-chevron-right"></i></a></span> <span>Products <i class="fa fa-chevron-right"></i></span></p>
-            <h2 class="mb-0 bread">Products</h2>
+            <p class="breadcrumbs mb-0"><span class="mr-2"><a href="{% url 'index' %}">Inicio <i class="fa fa-chevron-right"></i></a></span> <span>Productos <i class="fa fa-chevron-right"></i></span></p>
+            <h2 class="mb-0 bread">Productos</h2>
           </div>
         </div>
       </div>
@@ -19,19 +19,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <div class="row mb-4">
-                        <div class="col-md-12 d-flex justify-content-between align-items-center">
-                            <h4 class="product-select">Select Types of Products</h4>
-                            <form id="filter-form" method="GET">
-                                <select class="selectpicker" name="tipo_producto" multiple>
-                                    {% for x in tipo %}
-                                    <option value="{{ x.descripcion }}" {% if x.descripcion in tipos_seleccionados %}selected{% endif %}>{{ x.descripcion }}</option>
-                                    {% endfor %}
-                                </select>
-                                <button type="submit">Filter</button>
-                            </form>
-                        </div>
-                    </div>
                     <div class="row">
                         {% for aux in listado %}
                         <div class="col-md-4 d-flex">
@@ -58,8 +45,11 @@
                                 </div>
                             </div>
                         </div>
+
                         {% endfor %}
+                        
                     </div>
+                    
                     <div class="row mt-5">
                       <div class="col text-center">
                         <div class="block-27">
@@ -80,7 +70,7 @@
                 <div class="col-md-3">
                     <div class="sidebar-box ftco-animate">
                       <div class="categories">
-                        <h3>Product Types</h3>
+                        <h3>Tipo de Productos</h3>
 						<ul class="p-0">
 							{% for x in tipo %}
 							<li{% if x.descripcion in tipos_seleccionados %} class="selected"{% endif %}><a href="?tipo_producto={{ x.descripcion }}">{{ x.descripcion }} <span class="fa fa-chevron-right"></span></a></li>
@@ -125,6 +115,7 @@
                 </div>
             </div>
         </div>
+        
     </section>
 
     <script>
