--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -110,7 +110,6 @@
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
                             <a class="dropdown-item" href="{% url 'checkout' %}">Pago</a>
                             <a class="dropdown-item" href="{% url 'add' %}">Agregar Producto</a>
-                            <a class="dropdown-item" href="{% url 'update' %}">Actualizar</a>
                         {% elif user.is_authenticated %}
                             <a class="dropdown-item" href="{% url 'product' %}">Productos</a>
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
@@ -200,7 +199,7 @@
           <div class="row">
               <div class="col-md-12">
                   <p class="mb-0" style="color: rgba(255,255,255,.5);"><!-- El enlace a Colorlib no se puede eliminar. La plantilla está bajo licencia CC BY 3.0. -->
-                      Derechos de autor &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Esta plantilla fue creada con <i class="fa fa-heart color-danger" aria-hidden="true"></i> por <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
+                      Derechos de autor &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Esta plantilla fue creada con por sebalol y disociados.
                       <!-- El enlace a Colorlib no se puede eliminar. La plantilla está bajo licencia CC BY 3.0. --></p>
               </div>
           </div>
