--- a/core/templates/core/index-api.html
+++ b/core/templates/core/index-api.html
@@ -152,7 +152,7 @@
 					<div class="col-md-3 d-flex">
 						<div class="product ftco-animate">
 							{% if aux.imagen %}
-							<div class="img d-flex align-items-center justify-content-center" style="background-image: url({{ aux.imagen }});">
+							<div class="img d-flex align-items-center justify-content-center" style="background-image: url({{ aux.imagen.url }});">
 							{% else %}
 							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/prod-1.jpg);"></div>
 							{% endif %}
