--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -46,9 +46,9 @@
                   <div class="reg">
                     {% if user.is_authenticated %}
                         <a class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">Productos</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">Bienvenido</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown04">
-                                <a class="dropdown-item" href="{% url 'product' %}">Settings</a>
+                                <a class="dropdown-item" href="{% url 'setting' %}">Settings</a>
                                 <a class="dropdown-item" href="{% url 'logout' %}">Cerrar sesion</a>
 
                             </div>
@@ -109,8 +109,7 @@
                             <a class="dropdown-item" href="{% url 'product' %}">Productos</a>
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
                             <a class="dropdown-item" href="{% url 'checkout' %}">Pago</a>
-                            <a class="dropdown-item" href="{% url 'add' %}">Agregar Producto</a>
-                            <a class="dropdown-item" href="{% url 'update' %}">Actualizar</a>
+                            <a class="dropdown-item" href="{% url 'add' %}">Agregar Producto</a>   
                         {% elif user.is_authenticated %}
                             <a class="dropdown-item" href="{% url 'product' %}">Productos</a>
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
