--- a/core/templates/core/update-product.html
+++ b/core/templates/core/update-product.html
@@ -6,7 +6,19 @@
 
 {% endblock %}
 {% block contenido %}
-<div class="container-fluid">
+<section class="hero-wrap hero-wrap-2" style="background-image: url({% static 'core/images/portada2.jpg' %});" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row no-gutters slider-text align-items-end justify-content-center">
+			<div class="col-md-9 ftco-animate mb-5 text-center">
+				<p class="breadcrumbs mb-0"><span class="mr-2"><a href="{% url 'index' %}">Inicio <i class="fa fa-chevron-right"></i></a></span> <span>Actualizar producto <i class="fa fa-chevron-right"></i></span></p>
+				<h2 class="mb-0 bread">Actualizar producto</h2>
+			</div>
+		</div>
+	</div>
+</section>
+
+<div class="container">
   <div class="row">
     <div class="col">
       <form action="" method="POST" enctype="multipart/form-data">
@@ -14,13 +26,16 @@
         <table>
             {{ form | crispy }}
         </table>
-        <input type="submit" class="btn btn-success" value="Modificar">
+        <div class="text-center">
+          <input type="submit" class="btn btn-primary" value="Modificar">
+        </div>
+
     </form>
     </div>
   </div>
 </div>
 
-
+<br>
 
 
 {% endblock %}
