--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -10056,3 +10056,34 @@ textarea.form-control {
   border-color: #000;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+.progress-bar {
+  width: 100%;
+  height: 20px;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  border-radius: 5px;
+  transition: width 0.3s;
+}
+
+.progress-bar-fill.validacion {
+  background-color: red; /* Color para el estado "validacion" */
+}
+
+.progress-bar-fill.preparacion {
+  background-color: #ffc107; /* Color para el estado "preparacion" */
+}
+
+.progress-bar-fill.reparto {
+  background-color: #2196f3; /* Color para el estado "reparto" */
+}
+
+.progress-bar-fill.entregado {
+  background-color: #4caf50; /* Color para el estado "entregado" */
+}
+
+
