api de los productos

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -149,7 +149,7 @@
 					<div class="col-md-3 d-flex">
 						<div class="product ftco-animate">
 							{% if aux.imagen %}
-							<div class="img d-flex align-items-center justify-content-center" style="background-image: url({{ aux.0imagen }});">
+							<div class="img d-flex align-items-center justify-content-center" style="background-image: url({{ aux.imagen }});">
 							{% else %}
 							<div class="img d-flex align-items-center justify-content-center" style="background-image: url(images/prod-1.jpg);"></div>
 							{% endif %}
