--- a/core/templates/core/cart.html
+++ b/core/templates/core/cart.html
@@ -95,7 +95,7 @@
     		<div class="row justify-content-end">
     			<div class="col col-lg-5 col-md-6 mt-5 cart-wrap ftco-animate">
     				<div class="cart-total mb-3">
-    					<h3>Cart Totals</h3>
+    					<h3>Total del carrito</h3>
     					<p class="d-flex">
     						<span>Subtotal</span>
     						<span>${{sub_total|intcomma}}</span>
