--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -195,12 +195,12 @@
 					</div>
 				{% endfor %}
 				<!--fin de el for-->
-				<div class="row justify-content-center">
-					<div class="col-md-4">
-						<a href="{% url 'product' %}" class="btn btn-primary d-block"> View All Products <span class="fa fa-long-arrow-right"></span></a>
-					</div>
-				</div>
+
 			</div>
+			<div class="row justify-content-center text-center">
+				<a href="{% url 'product' %}" class="btn btn-primary">View All Products <span class="fa fa-long-arrow-right"></span></a>
+			</div>
+			
 		</section>
   
 		<section class="ftco-section testimony-section img" style="background-image: url({% static 'core/images/fondo1.jpeg' %});">
