--- a/core/templates/core/product.html
+++ b/core/templates/core/product.html
@@ -26,14 +26,34 @@
                                 <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{ aux.imagen.url }});">
                                     <div class="desc">
                                         <p class="meta-prod d-flex">
+                                          {% if user.is_authenticated and user.is_staff %}
                                           <form action="{% url 'agregar' aux.id %}" method="post">
                                             {% csrf_token %}
                                             <a href="#" onclick="event.preventDefault(); this.closest('form').submit();" class="d-flex align-items-center justify-content-center">
                                               <span class="flaticon-shopping-bag"></span>
                                             </a>
-                                            </form>
+                                          </form>
+                                          <a href="{% url 'update' aux.id %}" class="d-flex align-items-center justify-content-center"><span class="fa fa-refresh"></span></a>
                                           <a href="{% url 'product-details' aux.id %}" class="d-flex align-items-center justify-content-center"><span class="flaticon-visibility"></span></a>
                                           <a href="#" onclick="eliminarProducto({{ aux.id }})" class="d-flex align-items-center justify-content-center"><span class="fa fa-trash"></span></a>
+                      
+                                          {% elif user.is_authenticated %}
+                                          <form action="{% url 'agregar' aux.id %}" method="post">
+                                            {% csrf_token %}
+                                              <a href="#" onclick="event.preventDefault(); this.closest('form').submit();" class="d-flex align-items-center justify-content-center">
+                                              <span class="flaticon-shopping-bag"></span>
+                                              </a>
+                                          </form>
+                                          <a href="{% url 'product-details' aux.id %}" class="d-flex align-items-center justify-content-center"><span class="flaticon-visibility"></span></a>
+                                          {% else %}
+                                          <form action="{% url 'login' %}">
+                                            {% csrf_token %}
+                                              <a href="{% url 'login' %}" class="d-flex align-items-center justify-content-center">
+                                              <span class="flaticon-shopping-bag"></span>
+                                              </a>
+                                          </form>
+                                            <a href="{% url 'product-details' aux.id %}" class="d-flex align-items-center justify-content-center"><span class="flaticon-visibility"></span></a>
+                                          {% endif %}
                                         </p>
                                     </div>
                                 </div>
