--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -109,7 +109,10 @@
                             <a class="dropdown-item" href="{% url 'product' %}">Productos</a>
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
                             <a class="dropdown-item" href="{% url 'checkout' %}">Pago</a>
-                            <a class="dropdown-item" href="{% url 'add' %}">Agregar Producto</a>   
+                            <a class="dropdown-item" href="{% url 'add' %}">Agregar Producto</a> 
+                            <a class="dropdown-item" href="{% url 'lista_cupones' %}">Listar cupones</a> 
+                            <a class="dropdown-item" href="{% url 'crear_cupon' %}">Crear cupones</a> 
+
                         {% elif user.is_authenticated %}
                             <a class="dropdown-item" href="{% url 'product' %}">Productos</a>
                             <a class="dropdown-item" href="{% url 'cart' %}">Carrito</a>
