--- a/core/templates/core/cambiar_estado_seguimiento.html
+++ b/core/templates/core/cambiar_estado_seguimiento.html
@@ -13,6 +13,7 @@
     <div class="card mb-3">
       <div class="card-body">
         <h3 class="card-title">Seguimiento ID: {{ seguimiento.id }}</h3>
+        <h3 class="card-title">Usuario: {{ seguimiento.usuario }}</h3>
         <p class="card-text">Producto: {{ seguimiento.producto.nombre }}</p>
         <p class="card-text">Estado actual: {{ seguimiento.estado }}</p>
         <div class="form-group">
