--- a/core/templates/core/wishlist.html
+++ b/core/templates/core/wishlist.html
@@ -37,10 +37,7 @@
 			  <!-- inicio for -->
 			  <tr class="alert" role="alert">
 				<td>
-				  <label class="checkbox-wrap checkbox-primary">
-					<input type="checkbox">
-					<span class="checkmark"></span>
-				  </label>
+				  <span>{{ aux.id }}</span>
 				</td>
 				<td>
 				  <div class="img" style="background-image: url({{ carrito.producto.imagen.url }});"></div>
